syntax = "proto3";

package api;

option go_package = "app-store-notify-server/pkg/pb/api";

service NotifyService {
  rpc Notify(NotifyRequest) returns (NotifyResponse) {}
}

message NotifyRequest {
  string signedPayload = 1;
}

message NotifyResponse {}
